--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     </div>
 
     <main>
-        <section id="home" class="hero" aria-label="Hero section">
+        <section id="home" class="hero animate-fade-in" aria-label="Hero section">
             <h2>Artesian Beer Brewing in Reeuwijk, Netherlands</h2>
             <p>Experience the rich flavors of Dorpsedeugniet’s hand-crafted beers, brewed with passion and tradition in the heart of the Netherlands. Our small-batch brewing process in Reeuwijk ensures every sip is a taste of Dutch craftsmanship.</p>
             <a href="#beers"><button aria-label="Discover our beers">Discover Our Beers</button></a>
@@ -202,7 +202,7 @@
         </section>
 
         <!-- Newsletter Signup Section -->
-        <section class="newsletter">
+        <section class="newsletter animate-fade-in">
             <h3>Stay Updated with Dorpsedeugniet</h3>
             <p>Join our newsletter to receive updates on new beer releases, events in Reeuwijk, and exclusive offers for artesian beer lovers.</p>
             <form action="mailto:jaspervdz@me.com" method="post" enctype="text/plain">
@@ -211,7 +211,7 @@
             </form>
         </section>
 
-        <section id="contact" class="content-section">
+        <section id="contact" class="content-section animate-fade-in">
             <h2>Contact Dorpsedeugniet</h2>
             <p>Questions about our artesian beers? Interested in visiting Reeuwijk for a tasting? Reach out to us!</p>
             <form class="contact-form" action="mailto:jaspervdz@me.com" method="post" enctype="text/plain" aria-label="Contact form">
