--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -33,7 +33,7 @@
     </div>
 
     <main>
-        <section class="content-section">
+        <section class="content-section animate-fade-in">
             <h2>Privacy Policy</h2>
             <p><strong>Last Updated: March 21, 2025</strong></p>
             <p>At Dorpsedeugniet, a small beer brewer based in Reeuwijk, Netherlands, we are committed to protecting your privacy. This Privacy Policy explains how we collect, use, store, and protect your personal data in compliance with the General Data Protection Regulation (GDPR) and other applicable laws.</p>
