--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -40,14 +40,14 @@
 
             <h3>1. Information We Collect</h3>
             <p>We may collect the following personal data when you interact with our website or services:</p>
-            <ul>
+            <ul class="policy-list">
                 <li><strong>Contact Information:</strong> Name and email address when you submit a message via our contact form.</li>
                 <li><strong>Usage Data:</strong> Information about how you use our website, such as your IP address, browser type, and pages visited, collected through cookies and analytics tools.</li>
             </ul>
 
             <h3>2. How We Use Your Information</h3>
             <p>We use your personal data for the following purposes:</p>
-            <ul>
+            <ul class="policy-list">
                 <li>To respond to inquiries submitted through our contact form.</li>
                 <li>To improve our website and services by analyzing usage data.</li>
                 <li>To comply with legal obligations under GDPR and Dutch law.</li>
@@ -55,7 +55,7 @@
 
             <h3>3. Legal Basis for Processing</h3>
             <p>We process your personal data based on the following legal grounds:</p>
-            <ul>
+            <ul class="policy-list">
                 <li><strong>Consent:</strong> When you provide your information through our contact form, you consent to us using it to respond to your inquiry.</li>
                 <li><strong>Legitimate Interest:</strong> We may process usage data to improve our website and services, ensuring this does not override your rights and freedoms.</li>
                 <li><strong>Legal Obligation:</strong> To comply with applicable laws and regulations.</li>
@@ -67,7 +67,7 @@
 
             <h3>5. Your Rights</h3>
             <p>Under GDPR, you have the following rights regarding your personal data:</p>
-            <ul>
+            <ul class="policy-list">
                 <li><strong>Access:</strong> Request access to the personal data we hold about you.</li>
                 <li><strong>Rectification:</strong> Request correction of inaccurate or incomplete data.</li>
                 <li><strong>Erasure:</strong> Request deletion of your personal data (right to be forgotten).</li>
@@ -79,7 +79,7 @@
 
             <h3>6. Cookies and Analytics</h3>
             <p>We use cookies to enhance your experience on our website. These include:</p>
-            <ul>
+            <ul class="policy-list">
                 <li><strong>Essential Cookies:</strong> Necessary for the website to function properly.</li>
                 <li><strong>Analytics Cookies:</strong> To collect usage data and improve our website (e.g., Google Analytics).</li>
             </ul>
@@ -87,7 +87,7 @@
 
             <h3>7. Third-Party Sharing</h3>
             <p>We do not sell or share your personal data with third parties for marketing purposes. We may share your data with:</p>
-            <ul>
+            <ul class="policy-list">
                 <li><strong>Service Providers:</strong> Such as email providers to send responses to your inquiries.</li>
                 <li><strong>Legal Authorities:</strong> If required by law or to protect our rights.</li>
             </ul>
