--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -9,6 +9,11 @@
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://www.dorpsedeugniet.com/privacy-policy">
     <link rel="icon" type="image/png" href="/images/favicon.png">
+
+    <!-- Google Fonts for Classy Typography -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap">
+
+    <!-- External CSS -->
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
