--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
     <!-- Preload Critical Resources -->
     <link rel="preload" href="/images/dutch-canal-landscape.jpg" as="image">
 
+    <!-- Google Fonts for Classy Typography -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap">
+
     <!-- External CSS -->
     <link rel="stylesheet" href="css/styles.css">
 
