--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
     <!-- External CSS -->
     <link rel="stylesheet" href="css/styles.css">
 
+<!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-1CCQTG7M9R"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-1CCQTG7M9R'); </script>
+
     <!-- Structured Data for SEO -->
     <script type="application/ld+json">
     {
