--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#d2b48c">
     <title>Dorpsedeugniet - Artesian Beer Brewing in the Netherlands | Reeuwijk Small Batch</title>
-    <meta name="description" content="Discover Dorpsedeugniet, the finest artesian beer brewing in the Netherlands. Hand-crafted in Reeuwijk with premium ingredients, our small-batch beers offer unique, rich flavors for beer lovers worldwide.">
+    <meta name="description" content="Discover Dorpsedeugniet, the finest Artesian beer brewing in the Netherlands. Hand-crafted in Reeuwijk with premium ingredients, our small-batch beers offer unique, rich flavors for beer lovers worldwide.">
     <meta name="keywords" content="artesian beer brewing, Dutch beer, Netherlands beer, Reeuwijk beer, small batch brewing, craft beer, artisan beer, premium beer, Dorpsedeugniet, beer tasting">
     <meta name="author" content="Dorpsedeugniet">
     <meta name="robots" content="index, follow">
